fix: changed create project modal visibility

--- a/src/app/shared/pages/projects-page/projects-page.component.scss
+++ b/src/app/shared/pages/projects-page/projects-page.component.scss
@@ -1,5 +1,10 @@
 .projects {
   &_head {
     margin-bottom: 1rem;
+    display: flex;
+
+    .statusFilter {
+      margin-left: 20px;
+    }
   }
 }
